--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"></link>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
