fixed contact title placement, added more skills, added tech used for projects

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"></link>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css"> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Thomas Ly Portfolio</title>
   </head>
